# Music-Database

./: .anjuta_sym_db.db  AUTHORS  README
.anjuta/session/: anjuta.session  dock-layout.xml
src/: Makefile.am  main.pl
